solved scroll bug when nav is open on mobile

--- a/components/navigationBar/navigationBar.module.scss
+++ b/components/navigationBar/navigationBar.module.scss
@@ -3,11 +3,14 @@
 .header {
   position: relative;
   .menu {
+    position: fixed;
+    right: 10px;
+    top: 10px;
+
+    @extend %flex-row;
+
     img {
       width: 54px;
-      position: absolute;
-      right: -20px;
-      top: 10px;
     }
     cursor: pointer;
   }
@@ -88,6 +91,10 @@
 
         li {
           color: $text-light;
+
+          &:hover {
+            color: $background-color-light;
+          }
         }
       }
     }
